# vireon-lab

./: .env.example  .gitignore  .ignore  .pre-commit-config.yaml  3reps.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DOCUMENTATION_PROGRESS_REPORT.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  auto_docstring.py  do_migration.py  docker-compose.yml  find_docstrings.py  fix_twin_locks.py  main.py  mkdocs.yml  phases.md  pyproject.toml  refactor_imports.py  rename.py  replace_security_imports.py  requirements-lock.txt  requirements.txt  sbom.json  scratch_extract.py  scratch_summary.txt  split_security.py  test_ids.py
.agents/: ORIGINAL_REQUEST.md
.github/: PULL_REQUEST_TEMPLATE.md
Module/: nl001_challenges.md  nl001_lesson_part1.md  nl001_lesson_part3.md  nl001_lesson_part4.md  nl001_references.md  nl002_lab001_signal_processor.py  nl002_lab002_attack_detector.py  nl002_lesson_part1.md  nl002_lesson_part2.md  nl002_lesson_part3.md  nl003_challenges.md  nl003_lab001_firmware_simulator.py  nl003_lesson_part1_comprehensive.md  nl003_lesson_part1_concise.md  nl003_lesson_part2_comprehensive.md  nl003_lesson_part2_concise.md  nl003_lesson_part3_concise.md  nl003_references.md  nl004_lab001_protocol_simulator.py  nl004_lab002_protocol_attacks.py  nl004_lesson_part2.md
datasets/: README.md  validation_report.json
docs/: ARCHITECTURAL_BOUNDARIES.md  CAPABILITY_SYSTEM.md  CONFIGURATION_ARCHITECTURE.md  CONSTITUTION.md  ECOSYSTEM.md  FAQ.md  FINAL_ARCHITECTURE_AUDIT.md  LANGUAGE_INDEPENDENCE.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MIGRATION_MANIFEST.yaml  PLUGIN_LIFECYCLE.md  PLUGIN_SDK_DESIGN.md  QIF-DERIVATION-LOG.md  RUNTIME_REDESIGN.md  SECURITY_ARCHITECTURE.md  SIMULATION_FIDELITY.md  STANDARDS-DERIVATION-LOG.md  TESTING_ARCHITECTURE.md  VENDOR_SDK.md  VERSIONING_STRATEGY.md  api.md  architecture.md  config-migration.md  faq.md  glossary.md  index.md  physics.md  plugin-development.md  progress-report.md  roadmap.md  security_and_threats.md  technical-report.md
examples/: Makefile  basic_experiment.toml  custom_plugin_example.py  lsl_receiver.py  run_sample_experiment.py  simulate_brainflow_client.py
experiments/: default.toml  noise_attack.toml
knowledge/: README.md  architecture.md  overview.md  template.md
labs/: README.md
logs_78756688120/: 0_test (3.11).txt  1_test (3.12).txt  2_test (3.10).txt
neuro_dsl/: Cargo.toml
neuro_dsl/python_ext/: Cargo.toml
neuro_dsl/python_ext/src/: lib.rs
neuroshield/: __main__.py  mcp_server.py
profiles/: chbmit.yaml  openbci.yaml  physionet.yaml  siena.yaml  sleep_edf.yaml
runemate/: Cargo.toml
runemate/python_ext/: Cargo.toml
runemate/python_ext/src/: lib.rs
scratch/: fix_all.py  rename_neurodsl.py
scripts/: README.md  fetch_public_datasets.py
site/: 404.html
tests/: __init__.py  conftest.py  test_adversarial_attacks.py  test_adversarial_mitigations.py  test_adversarial_ml.py  test_anonymizer.py  test_attack_scenarios.py  test_authentication.py  test_bci_paradox_solvers.py  test_ble_emulator.py  test_boundaries.py  test_clinical_risk.py  test_cognitive_attacks.py  test_concurrency.py  test_coordinator_builder.py  test_coordinator_callbacks.py  test_core_infrastructure.py  test_crypto.py  test_cyber_physical_realism.py  test_dataset_manager.py  test_dbs_emulator.py  test_detection.py  test_dynamic_ids.py  test_e2ee.py  test_edf_reader.py  test_eeg_sample_reader.py  test_engine.py  test_fif_reader.py  test_fuzzer.py  test_hil_emulator.py  test_main_cli.py  test_mcp_server.py  test_mne_reader.py  test_openbci_emulator.py  test_ota_manual.py  test_ota_rollback.py  test_physical_attacks.py  test_pieeg_emulator.py  test_plugins.py  test_privacy_leakage.py  (+14 more)
threat_models/: MITRE.md  STRIDE.md  bci.yaml  cochlear.yaml  dbs.yaml  vns.yaml
to be followed./: ARCHITECTURE_REVIEW.md  ARCHITECTURE_STRESS_TEST.md  CODE_REVIEW.md  (+9 more)
vireon_lab/: README.md  __init__.py  config.py  pyproject.toml
vireon_lab/auth/: __init__.py  session_manager.py
vireon_lab/core_examples/: clinical.py
vireon_lab/dashboard/: app.py  canvas_waveform.py  ctf_challenges.py  educational_academy.py  forensic_exporter.py  live_signal_engine.py
vireon_lab/engine/: __init__.py  circular_buffer.py  interfaces.py  scheduler.py
vireon_lab/engine/artifacts/: physiological.py
vireon_lab/engine/attacks/: mutators.py
vireon_lab/engine/generators/: jansen_rit.py
vireon_lab/logging/: __init__.py  audit_logger.py
vireon_lab/middleware/: __init__.py  auth_middleware.py  exception_handler.py  rate_limiter.py
vireon_lab/providers/: __init__.py  sdk.py
vireon_lab/providers/ble/: __init__.py  attacks.py  emulator.py  true_ble.py
vireon_lab/providers/clinical/: closed_loop.py  cloud_stub.py  companion_stub.py  dbs_emulator.py  standards_mapping.py  standards_registry.py
vireon_lab/providers/clinical/data/: tara_stix.json  threat_atlas.json
vireon_lab/providers/datasets/: __init__.py  csv_reader.py  dataset_index.py  edf_reader.py  eeg_sample_reader.py  fif_reader.py  mne_reader.py  mock_reader.py
vireon_lab/providers/devices/: emotiv_emulator.py  hardware_bridge.py  muse_emulator.py  nsp_wrapper.py  openbci_board.py  openbci_emulator.py  pieeg.py
vireon_lab/providers/firmware/: __init__.py  cortex_m_stub.py  qemu_hil.py
vireon_lab/providers/hardware/devices/: __init__.py  emotiv_emulator.py  hardware_bridge.py  lsl_bridge.py  muse_emulator.py  nsp_wrapper.py  openbci_board.py  openbci_emulator.py  pieeg.py  synthetic.py
vireon_lab/providers/protocols/ble/: __init__.py  attacks.py  emulator.py  true_ble.py
vireon_lab/providers/reports/: generator.py  key.pem  vulnerability_monitor.py  web_server.py
vireon_lab/reference_providers/: clinical.py  ml_decoder.py
vireon_lab/reports/: cert.pem  generator.py  key.pem  vulnerability_monitor.py  web_server.py  ws_server.py
vireon_lab/reports/web/: index.html
vireon_lab/scenarios/: adversarial_ml.py  poisoning.py  sca.py
vireon_lab/workers/: __init__.py  simulation_worker.py
(+384 files in other folders)
