[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vireon_lab"]

[project]
name = "vireon-lab"
version = "1.0.0"
description = "Educational platform, tutorials, dashboard, and CTFs for VIREON"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "vireon @ git+https://github.com/SaadiMalik1/vireon.git@main",
    "streamlit>=1.54.0",
    "pandas~=2.2.0",
    "plotly~=5.18.0",
    "brainflow~=5.0.0",
    "pyedflib~=0.1.30",
    "mne>=1.6.0",
    "scipy>=1.11.0",
    "pylsl~=1.16.2",
    "weasyprint>=68.0",
    "bleak>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = false
