[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vireon-lab"
version = "0.1.0"
description = "Educational platform and reference implementations for VIREON"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "vireon>=0.1.0",
    "streamlit",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff"
]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
