[package]
name = "python_ext"
version = "1.0.0"
edition = "2024"

[lib]
name = "vireon_neuro_dsl"
crate-type = ["cdylib"]

[dependencies]
forge = { path = "../forge" }
scribe = { path = "../scribe" }
pyo3 = { version = "0.20", features = ["extension-module"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
